--- a/_posts/2015-11-21-three-days-of-rain.html
+++ b/_posts/2015-11-21-three-days-of-rain.html
@@ -4,7 +4,7 @@ layout: post
 date: 2016-01-28
 ---
 
-
+<!-- <div class="blog"> -->
 <p><span class="play-name">Three Days of Rain</span> by Richard Greenberg is one of the best plays I've never seen. By that I mean, I've read the play, and fell in love with it.
   The show has a very small cast, but manages do do huge things with each player. </p>
 
@@ -37,3 +37,4 @@ And it manages to sustain that for hundreds of pages-you flip through-narratives
 
 <p>There are many other great monologues contained in this play. Everyone of them is listed as an overdone piece for auditions. Despite sounding like a negative,
   I think it really speaks to the quality of Greenberg's writing.</p>
+<!-- </div> -->
