This was an aliased commit.

--- a/_posts/2016-02-16-from-sinatra-to-rails.html
+++ b/_posts/2016-02-16-from-sinatra-to-rails.html
@@ -6,7 +6,7 @@ date: 2016-02-16
 
 	<div class="blog">
 	   <h1>The Evolution from Sinatra to Rails</h1><br>
-     <h3>From someone that just learned Rails basics today</h3>
+     <h3 class="small-head">From someone that just learned Rails basics today</h3>
 
      <p>
        I learned how to start a project and lay the groundworks for a CRUD funtional project today.
